for host server to work